--- a/packages/blockquote/src/scss/_component.scss
+++ b/packages/blockquote/src/scss/_component.scss
@@ -5,8 +5,8 @@
   color: core.$uq-purple;
   font-style: italic;
   height: auto;
-  margin-left: core.$space-l;
-  padding: core.$space core.$space-m;
+  margin-left: core.$space-uuuuul;
+  padding: core.$space-uuuuul core.$space-uuuuul;
   position: relative;
   width: calc(100% - #{core.$space-l});
 
