--- a/packages/card/src/scss/_global.scss
+++ b/packages/card/src/scss/_global.scss
@@ -53,7 +53,7 @@ $card-shaded-bg: core.$uq-neutral-light80;
         min-width: 50%;
       }
       .uq-card__content {
-        padding: core.$space-none core.$space;
+        padding: core.$space-none core.$space-uuuuul;
       }
       .uq-card__title {
         margin: core.$space-none core.$space-none core.$space-s;
@@ -62,7 +62,7 @@ $card-shaded-bg: core.$uq-neutral-light80;
         display: none;
       }
       .uq-card__actions {
-        padding: core.$space-none core.$space core.$space-none;
+        padding: core.$space-none core.$space-uuuuul core.$space-none;
       }
     }
   }
