--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -7,11 +7,11 @@ $form-border-width: 1px;
 $form-color-error: core.$alert;
 $form-color-success: core.$success;
 $form-description-size: core.$font-size-xs;
-$form-element-height: core.$space-xl;
+$form-element-height: core.$space-uuuuul;
 $form-focus-color: core.$link;
 $form-label-size: core.$font-size-s;
 $form-placeholder-color: core.$uq-neutral-dark40;
-$form-spacing: core.$space;
+$form-spacing: core.$space-uuuuul;
 $form-text-color: core.$text;
 $form-text-disabled-color: core.$uq-neutral-dark20;
 $form-text-size: core.$font-size;
