--- a/packages/grid/src/scss/_component.scss
+++ b/packages/grid/src/scss/_component.scss
@@ -112,7 +112,7 @@
 
     .uq-grid__col {
       flex: 1 0 18.75rem;
-      margin-right: core.$space-m;
+      margin-right: core.$space-uuuuul;
     }
   }
 }
