--- a/packages/storybook-html/stories/components/form/form.scss
+++ b/packages/storybook-html/stories/components/form/form.scss
@@ -3,6 +3,6 @@
 
 .uqds {
   &-table__wrapper {
-    margin: core.$space core.$space-none;
+    margin: core.$space-uuuuul core.$space-none;
   }
 }
