--- a/packages/side-nav/src/scss/_component.scss
+++ b/packages/side-nav/src/scss/_component.scss
@@ -19,7 +19,7 @@
 
   &__title {
     margin: core.$space-none;
-    padding: core.$space core.$space-m;
+    padding: core.$space-uuuuul core.$space-uuuuul;
 
     &-link {
       font-size: core.$font-size-l;
@@ -59,7 +59,7 @@
       }
 
       .uq-side-nav__link {
-        padding: core.$space core.$space core.$space core.$space-xxl !important;
+        padding: core.$space-uuuuul core.$space-uuuuul core.$space-uuuuul core.$space-uuuuul !important;
 
         &:hover,
         &:focus {
@@ -77,7 +77,7 @@
 
       .uq-side-nav__link {
         display: block;
-        padding: core.$space core.$space-m;
+        padding: core.$space-uuuuul core.$space-uuuuul;
         color: core.$text;
         text-decoration: none;
 
@@ -103,7 +103,7 @@
         display: none; //block
         width: 3rem;
         height: 3.5rem;
-        padding: core.$space core.$space;
+        padding: core.$space-uuuuul core.$space-uuuuul;
         text-indent: -100vw;
         background-image: url(icon-constants.get-icon(
           "standard--arrow-down-1",
