--- a/packages/previous-next/src/scss/_component.scss
+++ b/packages/previous-next/src/scss/_component.scss
@@ -47,7 +47,7 @@
 
   &__link-previous {
     position: relative;
-    padding-left: core.$space-xxl;
+    padding-left: core.$space-xxxl;
     float: left;
 
     &::before {
@@ -67,7 +67,7 @@
 
   &__link-next {
     position: relative;
-    padding-right: core.$space-xxl;
+    padding-right: core.$space-xxxl;
     text-align: right;
     float: right;
 
