--- a/packages/alert/src/scss/_component.scss
+++ b/packages/alert/src/scss/_component.scss
@@ -13,7 +13,7 @@
 
     .uq-alert__message {
       &:not(:last-child) {
-        padding-right: core.$space-xxl;
+        padding-right: core.$space-xxxl;
       }
     }
   }
@@ -31,11 +31,11 @@
     font-size: $alert-font-size-s;
     font-weight: $alert-font-weight-thin;
     line-height: core.$line-height-h;
-    padding-top: core.$space;
-    padding-bottom: core.$space;
-    padding-left: core.$space;
-    padding-right: core.$space;
-    margin-left: core.$space-l;
+    padding-top: core.$space-m;
+    padding-bottom: core.$space-m;
+    padding-left: core.$space-m;
+    padding-right: core.$space-m;
+    margin-left: core.$space-xl;
 
     &::before {
       content: "";
@@ -45,15 +45,15 @@
       ));
       background-repeat: no-repeat;
       background-size: 1.5rem;
-      width: core.$space-m;
-      height: core.$space-m;
+      width: core.$space-l;
+      height: core.$space-l;
       position: absolute;
       top: 0.85rem;
       left: -(core.$space);
     }
 
     p {
-      margin-bottom: core.$space;
+      margin-bottom: core.$space-m;
 
       &:last-child {
         margin-bottom: core.$space-none;
@@ -74,8 +74,8 @@
     background-position: center;
     background-color: transparent;
     border: none;
-    width: core.$space-xxl;
-    height: core.$space-xxl;
+    width: core.$space-xxxl;
+    height: core.$space-xxxl;
     text-indent: 999px;
     overflow: hidden;
     cursor: pointer;
@@ -154,7 +154,7 @@
       line-height: #{core.$line-height}rem;
       font-weight: core.$font-weight-normal;
       margin-left: core.$space-compressed-uuul;
-      padding: core.$space-stretched-s core.$space-m core.$space-stretched-s
+      padding: core.$space-stretched-s core.$space-l core.$space-stretched-s
         core.$space-s;
 
       @media #{core.$screen-md-up} {
@@ -168,11 +168,11 @@
       &::before {
         content: "";
         background-size: 1.5rem;
-        width: core.$space-m;
-        height: core.$space-m;
+        width: core.$space-l;
+        height: core.$space-l;
         position: absolute;
         top: core.$space-stretched-s;
-        left: -(core.$space-m);
+        left: -(core.$space-l);
       }
     }
   }
