--- a/packages/footer-legacy/src/scss/_component.scss
+++ b/packages/footer-legacy/src/scss/_component.scss
@@ -40,8 +40,8 @@
     font-style: italic;
     font-weight: core.$font-weight-normal;
     line-height: core.$line-height;
-    margin: core.$space-none core.$space-none core.$space-l;
-    padding: core.$space-none core.$space-none core.$space-l;
+    margin: core.$space-none core.$space-none core.$space-xl;
+    padding: core.$space-none core.$space-none core.$space-xl;
 
     @media #{core.$screen-md-up} {
       font-size: core.$font-size-m;
@@ -56,8 +56,8 @@
   &__container {
     @include grid.layout-containment;
     @include grid.grid-col-padding;
-    padding-top: core.$space-xxl;
-    padding-bottom: core.$space-xxl;
+    padding-top: core.$space-xxxl;
+    padding-bottom: core.$space-xxxl;
   }
 
   &__row {
@@ -94,7 +94,7 @@
   }
 
   &__footer {
-    margin: core.$space-l core.$space-none core.$space-none core.$space-none;
+    margin: core.$space-xl core.$space-none core.$space-none core.$space-none;
     overflow: hidden;
 
     .legacy-footer__row {
@@ -139,8 +139,8 @@
     &__list {
       list-style: none;
       margin-top: 0;
-      margin-bottom: core.$space;
-      margin-left: -(core.$space-m);
+      margin-bottom: core.$space-m;
+      margin-left: -(core.$space-l);
       margin-right: 0;
       overflow: hidden;
       padding: 0;
@@ -148,7 +148,7 @@
       > li {
         display: block;
         float: left;
-        margin-left: core.$space-m;
+        margin-left: core.$space-l;
 
         > * {
           display: block;
@@ -169,6 +169,6 @@
   }
 
   &--full-width {
-    padding: core.$space-none core.$space;
+    padding: core.$space-none core.$space-m;
   }
 }
