--- a/packages/grid-menu/src/scss/_component.scss
+++ b/packages/grid-menu/src/scss/_component.scss
@@ -43,7 +43,7 @@
     font-size: 1.375rem;
     font-weight: 400;
     line-height: normal;
-    padding: core.$space core.$space-l core.$space core.$space;
+    padding: core.$space-m core.$space-xl core.$space-m core.$space-m;
     position: relative;
     height: 100%;
 
@@ -123,7 +123,7 @@
   }
 
   @media only screen and #{core.$screen-md-up} {
-    gap: core.$space;
+    gap: core.$space-m;
   }
 }
 
