--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -33,8 +33,8 @@
       margin-left: auto;
       margin-right: auto;
       grid-template-areas: "logo mainnav searchtoggle";
-      padding-left: core.$space;
-      padding-right: core.$space;
+      padding-left: core.$space-m;
+      padding-right: core.$space-m;
     }
   }
 
@@ -72,7 +72,7 @@
   & .nav-primary__toggle {
     background: none;
     border: none;
-    padding: 1.75rem core.$space-l;
+    padding: 1.75rem core.$space-xl;
     height: 100%;
 
     @media #{core.$screen-lg-up} {
@@ -100,7 +100,7 @@
       transform: translate(50%, 50%);
       position: absolute;
       top: 0.625rem;
-      right: core.$space-l;
+      right: core.$space-xl;
     }
 
     &--is-open {
@@ -130,7 +130,7 @@
       transform: translate(50%, 50%);
       position: absolute;
       top: 0.625rem;
-      right: core.$space-l;
+      right: core.$space-xl;
 
       @media #{core.$screen-lg-up} {
         top: 0.1rem;
@@ -187,7 +187,7 @@
 
   &__nav-primary-container {
     @media #{core.$screen-lg-up} {
-      padding: 0 0 0 core.$space-xl;
+      padding: 0 0 0 core.$space-xxl;
     }
   }
 
@@ -234,7 +234,7 @@
     display: block;
     color: core.$uq-white; //core.$uq-purple;
     text-decoration: none;
-    padding: core.$space core.$space-m;
+    padding: core.$space-m core.$space-l;
     transition: background-color 0.25s, border-color 0.25s;
     font-weight: 400;
     position: relative;
@@ -246,12 +246,12 @@
     }
 
     @media #{core.$screen-lg-up} {
-      padding: core.$space-l core.$space-s;
+      padding: core.$space-xl core.$space-s;
     }
   }
 
   .nav-primary-link--has-dropdown {
-    padding: core.$space-l core.$space-m core.$space-l core.$space-s;
+    padding: core.$space-xl core.$space-l core.$space-xl core.$space-s;
 
     &::after {
       content: "";
@@ -260,8 +260,8 @@
         core.$uq-white
       ));
       background-repeat: no-repeat;
-      width: core.$space;
-      height: core.$space;
+      width: core.$space-m;
+      height: core.$space-m;
       transform: translateY(50%);
       position: absolute;
       top: 1.7rem;
@@ -282,7 +282,7 @@
 
     & li {
       & a {
-        padding-left: core.$space-xxl;
+        padding-left: core.$space-xxxl;
         color: core.$uq-purple;
       }
     }
@@ -294,7 +294,7 @@
 
       & li {
         & a {
-          padding-left: core.$space-ul;
+          padding-left: core.$space-uul;
         }
       }
     }
@@ -337,11 +337,11 @@
   &__nav-secondary-link {
     display: block;
     color: white;
-    padding: core.$space core.$space-m;
+    padding: core.$space-m core.$space-l;
 
     @media #{core.$screen-lg-up} {
       font-size: core.$font-size-s;
-      padding: 0.625rem core.$space;
+      padding: 0.625rem core.$space-m;
     }
 
     &:hover {
@@ -355,7 +355,7 @@
     width: 100%;
     top: 3.95rem;
     z-index: 20;
-    box-shadow: 0 0.75rem core.$space-m rgb(24 24 24 / 20%);
+    box-shadow: 0 0.75rem core.$space-l rgb(24 24 24 / 20%);
     transition: max-height 0.2s ease-in-out, transform 0.2s ease-in-out; //, visibility .2s ease;
     transform: translateY(-1rem);
     max-height: 0;
@@ -374,11 +374,11 @@
   }
 
   &__search-container {
-    padding: 0 core.$space-m;
+    padding: 0 core.$space-l;
 
     @media #{core.$screen-lg-up} {
-      padding-left: core.$space;
-      padding-right: core.$space;
+      padding-left: core.$space-m;
+      padding-right: core.$space-m;
       max-width: 73.25rem;
       margin-left: auto;
       margin-right: auto;
@@ -393,9 +393,9 @@
     max-width: 100%;
     min-width: 100%;
     border-radius: 5px;
-    background-position: core.$space;
-    padding-top: core.$space;
-    padding-bottom: core.$space;
+    background-position: core.$space-m;
+    padding-top: core.$space-m;
+    padding-bottom: core.$space-m;
   }
 
   &__search-query-label {
@@ -404,7 +404,7 @@
 
   &__search-query-input {
     margin: 0 !important;
-    padding: 0.75rem core.$space !important;
+    padding: 0.75rem core.$space-m !important;
   }
 
   &__search-query-button {
@@ -432,8 +432,8 @@
       content: "";
       position: absolute;
       display: block;
-      width: core.$space-m;
-      height: core.$space-m;
+      width: core.$space-l;
+      height: core.$space-l;
       top: core.$space-s;
       left: core.$space-s;
       background-size: 100%;
@@ -513,9 +513,9 @@
     margin-left: auto;
     margin-right: auto;
 
-    padding: core.$space core.$space-xxl core.$space-xl core.$space-xxl;
+    padding: core.$space-m core.$space-xxxl core.$space-xxl core.$space-xxxl;
     background: core.$uq-white;
-    box-shadow: 0 0.75rem core.$space-m rgb(24 24 24 / 20%);
+    box-shadow: 0 0.75rem core.$space-l rgb(24 24 24 / 20%);
     border-radius: 0 0 0.25rem 0.25rem;
 
     @media #{core.$screen-xl-up} {
@@ -530,7 +530,7 @@
 
   .megamenu__overview-link {
     display: block;
-    padding: core.$space core.$space-none;
+    padding: core.$space-m core.$space-none;
     color: core.$uq-purple;
   }
 
@@ -541,7 +541,7 @@
     padding-bottom: core.$space-xs;
 
     &:nth-of-type(2) {
-      padding-top: core.$space-xl;
+      padding-top: core.$space-xxl;
     }
   }
 
@@ -624,7 +624,7 @@ body.no-scroll {
       display: none;
 
       a {
-        padding: 0.75rem core.$space-m 0.75rem core.$space-xxl;
+        padding: 0.75rem core.$space-l 0.75rem core.$space-xxxl;
       }
     }
 
@@ -648,7 +648,7 @@ body.no-scroll {
 
   a {
     cursor: pointer;
-    padding: 0.75rem core.$space-m;
+    padding: 0.75rem core.$space-l;
     text-decoration: none;
     font-size: core.$font-size;
     color: core.$uq-purple;
@@ -662,7 +662,7 @@ body.no-scroll {
 
   & .slide-menu__backlink {
     font-weight: 500;
-    padding-left: core.$space-xxl;
+    padding-left: core.$space-xxxl;
 
     &::before {
       content: "";
@@ -700,11 +700,11 @@ body.no-scroll {
   /* Controls */
   .controls {
     display: flex;
-    margin-bottom: core.$space;
+    margin-bottom: core.$space-m;
   }
 
   .btn {
-    padding: 0.75rem core.$space-m;
+    padding: 0.75rem core.$space-l;
     flex: 1 0 auto;
     font-size: 90%;
     color: core.$uq-purple;
