--- a/packages/page-header/src/scss/_component.scss
+++ b/packages/page-header/src/scss/_component.scss
@@ -5,8 +5,8 @@
 
 .page {
   &__header {
-    padding: core.$space-m; //1.8rem;
-    margin-bottom: core.$space-m;
+    padding: core.$space-l; //1.8rem;
+    margin-bottom: core.$space-l;
     background: $page-header-shaded-bg;
   }
 
