--- a/packages/storybook-html/.storybook/custom/components/Toc.scss
+++ b/packages/storybook-html/.storybook/custom/components/Toc.scss
@@ -5,8 +5,8 @@
 .uqds-toc {
   box-sizing: border-box;
   background-color: core.$uq-white;
-  padding: core.$space-l core.$space-none core.$space-none core.$space-none;
-  margin-bottom: core.$space;
+  padding: core.$space-xl core.$space-none core.$space-none core.$space-none;
+  margin-bottom: core.$space-m;
 
   &__toc {
     font-size: core.$font-size-s;
@@ -46,21 +46,21 @@
     position: fixed;
     top: 0;
     right: 0;
-    padding-top: core.$space-ul;
+    padding-top: core.$space-uul;
     height: 100%;
 
     &__toc {
       margin-left: -(core.$space);
 
       .toc-list {
-        padding-left: core.$space;
+        padding-left: core.$space-m;
       }
 
       a.toc-link {
         display: inline-block;
         margin: core.$space-xs core.$space-none;
-        padding-left: core.$space;
-        padding-right: core.$space;
+        padding-left: core.$space-m;
+        padding-right: core.$space-m;
         text-decoration: none;
         transition: all 0.125s ease-in;
         color: core.$text;
