--- a/packages/storybook-html/stories/patterns/form-validation/examples/password-reset.scss
+++ b/packages/storybook-html/stories/patterns/form-validation/examples/password-reset.scss
@@ -3,7 +3,7 @@
 .story-password-strength-meter {
   box-sizing: border-box;
   font-size: core.$font-size-s;
-  margin-bottom: core.$space;
+  margin-bottom: core.$space-m;
   margin-top: -(0.675rem);
   min-height: 24px;
   position: relative;
