included additional variables missed in interation

--- a/packages/alert/src/scss/_component.scss
+++ b/packages/alert/src/scss/_component.scss
@@ -49,7 +49,7 @@
       height: core.$space-l;
       position: absolute;
       top: 0.85rem;
-      left: -(core.$space);
+      left: -(core.$space-m);
     }
 
     p {
