--- a/packages/card/src/scss/_component.scss
+++ b/packages/card/src/scss/_component.scss
@@ -30,7 +30,7 @@
 
     &:hover,
     &:focus {
-      box-shadow: 0 core.$space-s core.$space
+      box-shadow: 0 core.$space-s core.$space-m
         rgba(core.$uq-neutral-dark80, 0.15);
     }
   }
