more varibale updates

--- a/packages/storybook-html/stories/components/core/_colour.scss
+++ b/packages/storybook-html/stories/components/core/_colour.scss
@@ -4,7 +4,7 @@
 .uqds-colour__palette {
   width: 100%;
   border-radius: 0.25rem;
-  padding: $space;
+  padding: $space-m;
 }
 
 .uqds-colour__palette--large {
