--- a/packages/storybook-html/stories/components/core/_space.scss
+++ b/packages/storybook-html/stories/components/core/_space.scss
@@ -87,7 +87,7 @@
 
 /* Stretched container */
 .uqds-stretched-space {
-  padding: $space-stretched $space;
+  padding: $space-stretched $space-m;
 }
 
 /* Stacked */
