--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -223,6 +223,12 @@
   /* FOOTER */
   &__footer {
     grid-area: FooterTerms;
+
+    @media #{core.$screen-xl-up} {
+      & :last-child {
+        justify-content: flex-end;
+      }
+    }
   }
 
   &__footer-list {
@@ -446,10 +452,9 @@
     }
     @media #{core.$screen-xl-up} {
       grid-template-areas:
-        "FooterNavigation"
-        "FooterSocial"
-        "FooterOrg"
-        "FooterTerms";
+        "FooterNavigation FooterNavigation"
+        "FooterSocial FooterSocial"
+        "FooterOrg FooterTerms";
       row-gap: core.$space-l;
       padding: core.$space-l core.$space core.$space-xl;
     }
